--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ body, iframe, div, p, h1, h2, h3, h4, h5, h6, span {
 <body>
 
 <div class="iframe-container">
-    <iframe id="iframe" src="https://hansenhomeai.github.io/3732-47th-Pl-NE-CORE/" allowfullscreen></iframe>
+    <iframe id="iframe" src="https://hansenhomeai.github.io/HBR-CORE/" allowfullscreen></iframe>
 </div>
 
 <!-- Invisible overlay to detect outside clicks when details are open -->
